--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 黄玄的博客 | Hux Blog
+title: LittleGEEK
+SEOTitle: 小及的博客 | LittleGEEK
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
-url: "https://huangxuan.me" # your host, for absolute URL
+email: littlepetergeek@gmail.com
+description: "欢迎来到小及的世界！这里是AI+教育和训练G地！"
+keyword: "小及, LittleGEEK, Peter, AIGC训练营, peterGEEK, @LittleGEEK, 小及的博客, 人工智能, AI, AIGC"
+url: "https://littlepetergeek.github.io/" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
